crates/macros/tests/ui/crud_table_row_no_columns.rs
include!("crud_table_support.rs");

#[derive(Clone, nexora_macros::CrudTableRow)]
struct NoColumns {
    id: u64,
}

fn main() {}
